--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       DB_NAME: gestaopedidos
       DB_USER: postgres
       DB_PASSWORD: postgres
+      PAYMENT_NAME: Payment-Api
+      PAYMENT_URL: https://deckofcardsapi.com/api/deck/new/shuffle/?deck_count=1
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d gestaopedidos'" ]
       interval: 10s
