--- a/k8s/app-api-deployment.yaml
+++ b/k8s/app-api-deployment.yaml
@@ -28,25 +28,10 @@ spec:
               value: postgres
             - name: DB_PASSWORD
               value: secret
-            - name: ML_ACCESS_TOKEN
-              value: APP_USR-4103898864629348-100313-818c0e2802debe0ad24344fa2b6bcc46-2016994601
-            - name: ML_USER_ID
-              value: "2016994601"
-            - name: ML_EXTERNAL_POS_ID
-              value: caixa1
-            - name: APP_URL
-              value: https://bf6xujlaqd.execute-api.us-east-1.amazonaws.com
-          readinessProbe:
-            exec:
-              command:
-                - sh
-                - -c
-                - "pg_isready -h db-service -p 5432 -U postgres -d gestaopedidos"
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 5
-            successThreshold: 1
-            failureThreshold: 3
+            - name: PAYMENT_NAME
+              value: Payment-Api
+            - name: PAYMENT_URL
+              value: https://deckofcardsapi.com/api/deck/new/shuffle/?deck_count=1
           resources:
             requests:
               cpu: "100m"
