--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,17 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Start Sprint Boot Api for test BDD
+        run: mvn spring-boot:run -Dspring-boot.run.profiles=test
+
+      - name: Wait for API to be available
+        run: |
+          echo "Aguardando API subir..."
+          sleep 20 
 
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          TESTCONTAINERS_RYUK_DISABLED: true
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
           -Pcoverage \
