--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -13,7 +13,9 @@ spring:
   h2:
     console:
       enabled: true
-# OpenApi
+  sql:
+    init:
+      mode: always
 springdoc:
   api-docs:
     path: /api-docs
@@ -22,4 +24,3 @@ springdoc:
     tagsSorter: alpha
   version: v1
   show-actuator: false
-
