--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
 jobs:
   build:
     name: Build and analyze
@@ -57,10 +57,17 @@ jobs:
       - name: Set up Docker Compose
         run: |
           docker-compose -f docker-compose.yml up -d
+
       - name: Wait for PostgreSQL to be ready
         run: |
           docker-compose exec -T postgres pg_isready -U example
 
+      - name: Check Docker logs
+        run: |
+          docker-compose logs api
+          docker-compose logs postgres
+
       - name: Run BDD test
-        run: | 
+        run: |
           ./run_tests.sh
+      
