--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,14 +61,15 @@ jobs:
           
           docker-compose -f docker-compose.yml up -d
 
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          ./wait-for-it.sh postgres:5432 --timeout=30 --strict -- echo "PostgreSQL is up"
 
-      - name: Check Docker logs
-        run: |
-          docker-compose logs api
-          docker-compose logs postgres
+      #- name: Wait for PostgreSQL to be ready
+       # run: |
+        #  ./wait-for-it.sh postgres:5432 --timeout=30 --strict -- echo "PostgreSQL is up"
+
+      #- name: Check Docker logs
+       # run: |
+        #  docker-compose logs api
+         # docker-compose logs postgres
 
       - name: Run BDD test
         run: |
