--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,5 +73,6 @@ jobs:
 
       - name: Run BDD test
         run: |
+          cd test/br.com.postech.techchallenge/bddTests
           ./run_tests.sh
       
