--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,6 @@ jobs:
 
       - name: Run BDD test
         run: |
-          cd test\java\br\com\postech\techchallenge\bddTests
+          cd test/java/br/com/postech/techchallenge/bddTests
           mvn test
       
