--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.4'
 
 services:
   gestaopedidos:
-    image: api_pedidos
+    image: gestaopedidos:latest
     build: .
     depends_on:
       - db
     ports:
-      - 8080:8080
+      - 8082:8080
     environment:
       DB_HOST: db
       DB_PORT: 5432
@@ -16,6 +16,8 @@ services:
       DB_PASSWORD: postgres
       PAYMENT_NAME: Payment-Api
       PAYMENT_URL: http://pagamento:8080/api
+      PRODUCTION_NAME: Production-Api
+      PRODUCTION_URL: http://api:8000/api
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U postgres -d gestaopedidos'" ]
       interval: 10s
@@ -32,12 +34,12 @@ services:
     ports:
       - '5433:5432'
 
-#  pagamento:
-#    image: gestaopedidospayment  # Nome da imagem já buildada
-#    container_name: payment-service
-#    ports:
-#      - "8080:8080"
-#      - "8081:8081"
-#    environment:
-#      MongoConnectionString: string-mongo
-#      WebHookUrl: http://gestaopedidos:8080/order/makePayment
+  pagamento:
+    image: gestaopedidospayment:latest  # Nome da imagem já buildada
+    container_name: payment-service
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    environment:
+      MongoConnectionString: mongodb+srv://hugovictorlima16:6dN4V87oG5oknPSZ@cluster0.xebob.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      WebHookUrl: http://gestaopedidos:8080/order/makePayment
