--- a/k8s/app-api-service.yaml
+++ b/k8s/app-api-service.yaml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gestaopedidos-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" 
 spec:
   selector:
     app: gestaopedidos
@@ -11,5 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 30001
-  type: NodePort
+  type: ClusterIP
