--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,11 @@ name: SonarQube
 on:
   push:
     branches:
-      - main
+      - '*'
   pull_request:
     types: [ opened, synchronize, reopened ]
+    branches:
+      - "main"
 jobs:
   build:
     name: Build and analyze
