Corrige image docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   gestaopedidos:
-    image: gestaopedidos:latest
+    image: gestaopedidos
     build: .
     depends_on:
       - db
